fix: remove scrollbars from Monitor page

--- a/src/client/monitor/interesting-projects.scss
+++ b/src/client/monitor/interesting-projects.scss
@@ -2,6 +2,4 @@
 
 .interestingProjects {
   @include layout.fill-parent;
-
-  overflow: scroll;
 }
